--- a/CollaborativeFiltering.ipynb
+++ b/CollaborativeFiltering.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "bf7b5cb6",
    "metadata": {},
    "outputs": [],
@@ -30,12 +30,124 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0067fce1",
+   "metadata": {},
+   "source": [
+    "# Import Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "5ac30530",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>username</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Shawn Wilson</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1997-12-04 15:55:49</td>\n",
+       "      <td>Star Wars (1977)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Shawn Wilson</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1997-12-04 15:55:49</td>\n",
+       "      <td>Empire Strikes Back, The (1980)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Shawn Wilson</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1997-12-04 15:55:49</td>\n",
+       "      <td>Gone with the Wind (1939)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>196</td>\n",
+       "      <td>Bessie White</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1997-12-04 15:55:49</td>\n",
+       "      <td>Kolya (1996)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>196</td>\n",
+       "      <td>Bessie White</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1997-12-04 16:11:03</td>\n",
+       "      <td>Mrs. Doubtfire (1993)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id      username  rating           timestamp  \\\n",
+       "0        0  Shawn Wilson       5 1997-12-04 15:55:49   \n",
+       "1        0  Shawn Wilson       5 1997-12-04 15:55:49   \n",
+       "2        0  Shawn Wilson       1 1997-12-04 15:55:49   \n",
+       "3      196  Bessie White       3 1997-12-04 15:55:49   \n",
+       "4      196  Bessie White       4 1997-12-04 16:11:03   \n",
+       "\n",
+       "                             title  \n",
+       "0                 Star Wars (1977)  \n",
+       "1  Empire Strikes Back, The (1980)  \n",
+       "2        Gone with the Wind (1939)  \n",
+       "3                     Kolya (1996)  \n",
+       "4            Mrs. Doubtfire (1993)  "
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = pd.read_csv(filepath_or_buffer=\"./Movie_data.csv\", names=[\"user_id\", \"username\", \"item_id\", \"rating\", \"timestamp\"])\n",
+    "df1[\"timestamp\"] = pd.to_datetime(df1[\"timestamp\"], unit=\"s\")\n",
+    "\n",
+    "df2 = pd.read_csv(filepath_or_buffer=\"./Movie_Id_Titles.csv\")\n",
+    "\n",
+    "join_df = df1.join(df2.set_index(\"item_id\"), on=\"item_id\")\n",
+    "join_df = join_df.drop(columns=\"item_id\")\n",
+    "\n",
+    "join_df.head()"
+   ]
   }
  ],
  "metadata": {
