Explored the dataset

--- a/CollaborativeFiltering.ipynb
+++ b/CollaborativeFiltering.ipynb
@@ -34,7 +34,7 @@
    "id": "0067fce1",
    "metadata": {},
    "source": [
-    "# Import Dataset"
+    "## Import Dataset"
    ]
   },
   {
@@ -147,6 +147,99 @@
     "join_df = join_df.drop(columns=\"item_id\")\n",
     "\n",
     "join_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41d6967e",
+   "metadata": {},
+   "source": [
+    "## Explore Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b96ffeeb",
+   "metadata": {},
+   "source": [
+    "### Dimensions of the Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "88a36da3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The shape of the dataset is: 100003 rows × 5 columns\n",
+      "The size of the dataset is: 500,015\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows, cols = join_df.shape\n",
+    "print(f\"The shape of the dataset is: {rows} rows × {cols} columns\")\n",
+    "print(f\"The size of the dataset is: {join_df.size:,}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8166af7a",
+   "metadata": {},
+   "source": [
+    "### Statistical Summary of the Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc9e5f7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import display\n",
+    "# Statistical summary of join_df\n",
+    "print(\"Shape:\", join_df.shape)\n",
+    "print(\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "        print(\"Could not compute timestamp range:\", e)    except Exception as e:        print(join_df['timestamp'].min(), 'to', join_df['timestamp'].max())        print(\"\n",
+    "Timestamp range:\")    try:if 'timestamp' in join_df.columns:# Timestamp range if available    print(\"No 'rating' column found in join_df.\")else:    print(join_df['rating'].value_counts().sort_index())if 'rating' in join_df.columns:print(\"\n",
+    "Rating distribution:\")    print(\"Unique items (item_id):\", join_df['item_id'].nunique())elif 'item_id' in join_df.columns:    print(\"Unique items (titles):\", join_df['title'].nunique())if 'title' in join_df.columns:# item/title: prefer 'title' if present, otherwise fall back to item_id if available    print(\"Unique usernames:\", join_df['username'].nunique())if 'username' in join_df.columns:print(\"Unique users:\", join_df['user_id'].nunique())print(\"\n",
+    "Unique counts:\")display(join_df.describe(include='all'))print(\"\n",
+    "Descriptive statistics (all columns):\")display(join_df.describe())print(\"\n",
+    "Descriptive statistics (numeric):\")print(join_df.isna().sum())print(\"\n",
+    "Missing values per column:\")print(join_df.dtypes)Columns and dtypes:\")"
    ]
   }
  ],
