similarity matrix created

--- a/CollaborativeFiltering.ipynb
+++ b/CollaborativeFiltering.ipynb
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "id": "71652186",
    "metadata": {},
    "outputs": [
@@ -878,6 +878,274 @@
     "movies = interaction_df.columns.to_numpy()\n",
     "\n",
     "interaction_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4fedeec",
+   "metadata": {},
+   "source": [
+    "## Check Interaction Matrix Sparsity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "20dee77c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total entries: 1,570,816\n",
+      "Observed ratings (non-zero): 99,696\n",
+      "Unrated (zero): 1,471,120\n",
+      "Sparsity: 0.9365 (93.65% of the matrix is empty)\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_entries = interaction.size\n",
+    "\n",
+    "non_zero_entries = np.count_nonzero(interaction)\n",
+    "\n",
+    "zero_entries = total_entries - non_zero_entries\n",
+    "\n",
+    "sparsity = zero_entries / total_entries\n",
+    "\n",
+    "print(f\"Total entries: {total_entries:,}\")\n",
+    "print(f\"Observed ratings (non-zero): {non_zero_entries:,}\")\n",
+    "print(f\"Unrated (zero): {zero_entries:,}\")\n",
+    "print(f\"Sparsity: {sparsity:.4f} ({sparsity * 100:.2f}% of the matrix is empty)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c8e7389",
+   "metadata": {},
+   "source": [
+    "## Create Similarity Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "7fe284e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>934</th>\n",
+       "      <th>935</th>\n",
+       "      <th>936</th>\n",
+       "      <th>937</th>\n",
+       "      <th>938</th>\n",
+       "      <th>939</th>\n",
+       "      <th>940</th>\n",
+       "      <th>941</th>\n",
+       "      <th>942</th>\n",
+       "      <th>943</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.120267</td>\n",
+       "      <td>0.116561</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.161475</td>\n",
+       "      <td>0.149818</td>\n",
+       "      <td>0.061552</td>\n",
+       "      <td>0.085212</td>\n",
+       "      <td>0.228361</td>\n",
+       "      <td>0.170817</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.139326</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.060997</td>\n",
+       "      <td>0.157028</td>\n",
+       "      <td>0.096390</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.150342</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.183361</td>\n",
+       "      <td>0.118904</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.120267</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.168937</td>\n",
+       "      <td>0.048388</td>\n",
+       "      <td>0.064561</td>\n",
+       "      <td>0.379670</td>\n",
+       "      <td>0.429682</td>\n",
+       "      <td>0.443097</td>\n",
+       "      <td>0.320079</td>\n",
+       "      <td>0.078385</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.372213</td>\n",
+       "      <td>0.119860</td>\n",
+       "      <td>0.269860</td>\n",
+       "      <td>0.193343</td>\n",
+       "      <td>0.197949</td>\n",
+       "      <td>0.118722</td>\n",
+       "      <td>0.315064</td>\n",
+       "      <td>0.149086</td>\n",
+       "      <td>0.181612</td>\n",
+       "      <td>0.399432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.116561</td>\n",
+       "      <td>0.168937</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.113393</td>\n",
+       "      <td>0.179694</td>\n",
+       "      <td>0.073623</td>\n",
+       "      <td>0.242106</td>\n",
+       "      <td>0.108604</td>\n",
+       "      <td>0.104257</td>\n",
+       "      <td>0.162470</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.147095</td>\n",
+       "      <td>0.310661</td>\n",
+       "      <td>0.363328</td>\n",
+       "      <td>0.410725</td>\n",
+       "      <td>0.322713</td>\n",
+       "      <td>0.231096</td>\n",
+       "      <td>0.228793</td>\n",
+       "      <td>0.162911</td>\n",
+       "      <td>0.175273</td>\n",
+       "      <td>0.106732</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.048388</td>\n",
+       "      <td>0.113393</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.349781</td>\n",
+       "      <td>0.021592</td>\n",
+       "      <td>0.074018</td>\n",
+       "      <td>0.067423</td>\n",
+       "      <td>0.084419</td>\n",
+       "      <td>0.062039</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.033885</td>\n",
+       "      <td>0.043453</td>\n",
+       "      <td>0.167140</td>\n",
+       "      <td>0.071288</td>\n",
+       "      <td>0.126278</td>\n",
+       "      <td>0.026758</td>\n",
+       "      <td>0.164539</td>\n",
+       "      <td>0.102899</td>\n",
+       "      <td>0.136757</td>\n",
+       "      <td>0.026990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.161475</td>\n",
+       "      <td>0.064561</td>\n",
+       "      <td>0.179694</td>\n",
+       "      <td>0.349781</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.031804</td>\n",
+       "      <td>0.068431</td>\n",
+       "      <td>0.091507</td>\n",
+       "      <td>0.188060</td>\n",
+       "      <td>0.101284</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.054615</td>\n",
+       "      <td>0.036784</td>\n",
+       "      <td>0.133619</td>\n",
+       "      <td>0.196561</td>\n",
+       "      <td>0.146058</td>\n",
+       "      <td>0.030202</td>\n",
+       "      <td>0.196858</td>\n",
+       "      <td>0.152041</td>\n",
+       "      <td>0.171538</td>\n",
+       "      <td>0.058752</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 944 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        0         1         2         3         4         5         6    \\\n",
+       "0  1.000000  0.120267  0.116561  0.000000  0.161475  0.149818  0.061552   \n",
+       "1  0.120267  1.000000  0.168937  0.048388  0.064561  0.379670  0.429682   \n",
+       "2  0.116561  0.168937  1.000000  0.113393  0.179694  0.073623  0.242106   \n",
+       "3  0.000000  0.048388  0.113393  1.000000  0.349781  0.021592  0.074018   \n",
+       "4  0.161475  0.064561  0.179694  0.349781  1.000000  0.031804  0.068431   \n",
+       "\n",
+       "        7         8         9    ...       934       935       936       937  \\\n",
+       "0  0.085212  0.228361  0.170817  ...  0.139326  0.000000  0.060997  0.157028   \n",
+       "1  0.443097  0.320079  0.078385  ...  0.372213  0.119860  0.269860  0.193343   \n",
+       "2  0.108604  0.104257  0.162470  ...  0.147095  0.310661  0.363328  0.410725   \n",
+       "3  0.067423  0.084419  0.062039  ...  0.033885  0.043453  0.167140  0.071288   \n",
+       "4  0.091507  0.188060  0.101284  ...  0.054615  0.036784  0.133619  0.196561   \n",
+       "\n",
+       "        938       939       940       941       942       943  \n",
+       "0  0.096390  0.000000  0.150342  0.000000  0.183361  0.118904  \n",
+       "1  0.197949  0.118722  0.315064  0.149086  0.181612  0.399432  \n",
+       "2  0.322713  0.231096  0.228793  0.162911  0.175273  0.106732  \n",
+       "3  0.126278  0.026758  0.164539  0.102899  0.136757  0.026990  \n",
+       "4  0.146058  0.030202  0.196858  0.152041  0.171538  0.058752  \n",
+       "\n",
+       "[5 rows x 944 columns]"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "user_similarity = cosine_similarity(interaction)\n",
+    "user_similarity_df = pd.DataFrame(user_similarity, index=users, columns=users)\n",
+    "user_similarity_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d75c1838",
+   "metadata": {},
+   "source": [
+    "## Provide Recommendations"
    ]
   }
  ],
