generate comments with ai (because i'm lazy)

--- a/CollaborativeFiltering.ipynb
+++ b/CollaborativeFiltering.ipynb
@@ -1448,6 +1448,385 @@
     "recommendations = recommend_movies_for_user(20, 10, 10)\n",
     "recommendations"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "aa1b845d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing app.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile app.py\n",
+    "# Jupyter \"magic\" that writes everything in this cell to a file named app.py.\n",
+    "# This lets me keep working in a notebook, but still produce a runnable Python script.\n",
+    "import argparse  # For parsing command-line arguments (e.g., --k 10 --topn 5 --out ...)\n",
+    "import json      # For writing the final recommendations out to a JSON file\n",
+    "import numpy as np  # NumPy for fast numerical operations (arrays, argpartition, etc.)\n",
+    "import pandas as pd  # Pandas for reading CSVs and reshaping data into a matrix\n",
+    "from sklearn.metrics.pairwise import cosine_similarity  # Computes cosine similarity between user vectors\n",
+    "\n",
+    "\n",
+    "def _top_k_similar_users(user_idx: int, user_similarity: np.ndarray, k: int) -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    Find the row indices of the k most similar users to the user at index `user_idx`.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    user_idx : int\n",
+    "        The row index of the target user inside the interaction matrix.\n",
+    "        (Not the user_id itself; this is the positional index.)\n",
+    "    user_similarity : np.ndarray\n",
+    "        A precomputed user-user similarity matrix of shape (n_users, n_users),\n",
+    "        where user_similarity[i, j] is the cosine similarity between users i and j.\n",
+    "    k : int\n",
+    "        The number of neighbors (similar users) we want to retrieve.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    np.ndarray\n",
+    "        An array of length k containing the indices of the most similar users,\n",
+    "        sorted from most similar to least similar.\n",
+    "\n",
+    "    Notes\n",
+    "    -----\n",
+    "    - We explicitly exclude the target user themself so they don't appear as their own nearest neighbor.\n",
+    "    - We use np.argpartition for efficiency (faster than sorting the entire array),\n",
+    "      then we sort only the top-k candidates to get them in correct order.\n",
+    "    \"\"\"\n",
+    "    # Copy the similarity row so we can safely modify it without changing the original matrix.\n",
+    "    # sim_vec[j] represents similarity between user_idx and user j.\n",
+    "    sim_vec = user_similarity[user_idx].copy()\n",
+    "\n",
+    "    # A user is always perfectly similar to themself (similarity = 1),\n",
+    "    # but we don't want them included in their own neighbor list.\n",
+    "    # Setting it to -inf guarantees it will never appear in the top-k list.\n",
+    "    sim_vec[user_idx] = -np.inf  # exclude self\n",
+    "\n",
+    "    # Safety: you can't pick more neighbors than the total number of other users available.\n",
+    "    # e.g., if there are 50 users, the max neighbors for one user is 49.\n",
+    "    k = min(k, sim_vec.shape[0] - 1)\n",
+    "\n",
+    "    # If k becomes 0 or negative (e.g., dataset has only 1 user), return an empty array.\n",
+    "    if k <= 0:\n",
+    "        return np.array([], dtype=int)\n",
+    "\n",
+    "    # np.argpartition does a \"partial selection\":\n",
+    "    # - It finds the indices of the top-k largest elements without fully sorting the whole array.\n",
+    "    # - This is much faster than np.argsort for large arrays.\n",
+    "    # We negate sim_vec because argpartition selects the *smallest* by default.\n",
+    "    candidate_idx = np.argpartition(-sim_vec, kth=k - 1)[:k]\n",
+    "\n",
+    "    # argpartition doesn't guarantee the top-k are sorted, so we sort just those candidates.\n",
+    "    # np.argsort gives ascending; [::-1] flips to descending (most similar first).\n",
+    "    candidate_idx = candidate_idx[np.argsort(sim_vec[candidate_idx])[::-1]]\n",
+    "\n",
+    "    return candidate_idx\n",
+    "\n",
+    "\n",
+    "def _recommend_top_n_for_user_with_scores(\n",
+    "    user_id: int,\n",
+    "    interaction: np.ndarray,\n",
+    "    users: np.ndarray,\n",
+    "    movies: np.ndarray,\n",
+    "    user_similarity: np.ndarray,\n",
+    "    k: int,\n",
+    "    top_n: int,\n",
+    ") -> list[dict]:\n",
+    "    \"\"\"\n",
+    "    Recommend top_n movies for a given user using user-user collaborative filtering.\n",
+    "\n",
+    "    Pipeline\n",
+    "    --------\n",
+    "    1) Find the k most similar users (neighbors).\n",
+    "    2) For each movie, compute the average rating among those k neighbors\n",
+    "       (only among neighbors who actually rated the movie).\n",
+    "    3) Filter out movies the target user already rated.\n",
+    "    4) Return the top_n movies with the highest neighbor-average rating.\n",
+    "\n",
+    "    Output format\n",
+    "    -------------\n",
+    "    [\n",
+    "      {\"title\": \"<movie title>\", \"score\": <avg_neighbor_rating>},\n",
+    "      ...\n",
+    "    ]\n",
+    "\n",
+    "    Assumptions\n",
+    "    -----------\n",
+    "    - The interaction matrix is dense and uses 0.0 to represent \"unrated\" entries.\n",
+    "    - Real ratings are positive (e.g., 1–5), so rating > 0 indicates the user rated the movie.\n",
+    "    \"\"\"\n",
+    "    # Map real user IDs (like 1, 2, 42, ...) to the corresponding row index in `interaction`.\n",
+    "    # We cast to int to avoid issues where user IDs are numpy types.\n",
+    "    user_to_idx = {int(uid): i for i, uid in enumerate(users)}\n",
+    "\n",
+    "    # If the requested user_id isn't in our matrix, we can't recommend anything.\n",
+    "    if int(user_id) not in user_to_idx:\n",
+    "        return []\n",
+    "\n",
+    "    # Convert the target user_id into its row index in the interaction matrix.\n",
+    "    ui = user_to_idx[int(user_id)]\n",
+    "\n",
+    "    # --------------------------\n",
+    "    # 1) Find k nearest neighbors\n",
+    "    # --------------------------\n",
+    "    neighbor_idx = _top_k_similar_users(ui, user_similarity, k=k)\n",
+    "\n",
+    "    # If there are no neighbors (tiny dataset edge case), return no recommendations.\n",
+    "    if neighbor_idx.size == 0:\n",
+    "        return []\n",
+    "\n",
+    "    # ------------------------------------------\n",
+    "    # 2) Compute movie average rating among neighbors\n",
+    "    # ------------------------------------------\n",
+    "    # Slice the matrix to keep only the neighbor rows.\n",
+    "    # Shape: (k, n_movies)\n",
+    "    neighbor_ratings = interaction[neighbor_idx, :]\n",
+    "\n",
+    "    # Mask for where a neighbor actually rated a movie.\n",
+    "    # True means neighbor_ratings[row, col] is a real rating, not 0.0.\n",
+    "    rated_mask = neighbor_ratings > 0\n",
+    "\n",
+    "    # Sum ratings per movie across the k neighbors.\n",
+    "    # Shape: (n_movies,)\n",
+    "    rating_sums = neighbor_ratings.sum(axis=0)\n",
+    "\n",
+    "    # Count how many neighbors rated each movie.\n",
+    "    # Shape: (n_movies,)\n",
+    "    rating_counts = rated_mask.sum(axis=0)\n",
+    "\n",
+    "    # Compute average rating per movie, but ONLY where rating_counts > 0 (to avoid divide-by-zero).\n",
+    "    # Movies with zero neighbor ratings get an average score of 0.0 (\"no evidence\").\n",
+    "    avg_ratings = np.where(rating_counts > 0, rating_sums / rating_counts, 0.0)\n",
+    "\n",
+    "    # ------------------------------------------\n",
+    "    # 3) Exclude movies already rated by the user\n",
+    "    # ------------------------------------------\n",
+    "    # already_rated[col] is True if the target user has a rating > 0 for that movie.\n",
+    "    already_rated = interaction[ui, :] > 0\n",
+    "\n",
+    "    # Candidate movies must meet two conditions:\n",
+    "    # - At least one neighbor rated it (rating_counts > 0)\n",
+    "    # - The target user has NOT rated it (~already_rated)\n",
+    "    # If a movie fails either condition, we force its candidate score to 0.0.\n",
+    "    candidate_scores = np.where((rating_counts > 0) & (~already_rated), avg_ratings, 0.0)\n",
+    "\n",
+    "    # If top_n is invalid or none of the candidates have non-zero scores, return empty.\n",
+    "    if top_n <= 0 or np.all(candidate_scores == 0):\n",
+    "        return []\n",
+    "\n",
+    "    # top_n can't exceed the number of available movies.\n",
+    "    top_n = min(top_n, candidate_scores.shape[0])\n",
+    "\n",
+    "    # --------------------------\n",
+    "    # 4) Pick top_n movies\n",
+    "    # --------------------------\n",
+    "    # Use argpartition again to efficiently get top_n indices without sorting everything.\n",
+    "    top_idx = np.argpartition(-candidate_scores, kth=top_n - 1)[:top_n]\n",
+    "\n",
+    "    # Sort those indices by score descending so output is in correct order.\n",
+    "    top_idx = top_idx[np.argsort(candidate_scores[top_idx])[::-1]]\n",
+    "\n",
+    "    # Build the final list of recommendations with a rounded score for readability in JSON.\n",
+    "    recs: list[dict] = []\n",
+    "    for i in top_idx:\n",
+    "        score = float(candidate_scores[i])  # ensure JSON-serializable float\n",
+    "\n",
+    "        # If score is 0 or negative (shouldn't happen with positive ratings), skip it.\n",
+    "        if score <= 0:\n",
+    "            continue\n",
+    "\n",
+    "        recs.append(\n",
+    "            {\n",
+    "                \"title\": str(movies[i]),        # movie title from the column labels\n",
+    "                \"score\": round(score, 4),       # rounded average neighbor rating\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "    return recs\n",
+    "\n",
+    "\n",
+    "def main() -> None:\n",
+    "    \"\"\"\n",
+    "    Entry point for the script.\n",
+    "\n",
+    "    Responsibilities:\n",
+    "    - Read input CSV files (ratings + movie titles)\n",
+    "    - Create the interaction matrix\n",
+    "    - Compute user-user cosine similarity\n",
+    "    - Generate top-N recommendations for each user\n",
+    "    - Sort users alphabetically by username\n",
+    "    - Write results to a JSON file\n",
+    "    \"\"\"\n",
+    "    # Set up CLI arguments so the script is configurable without editing code.\n",
+    "    parser = argparse.ArgumentParser(\n",
+    "        description=\"Export top-N user recommendations to JSON (user-user CF).\"\n",
+    "    )\n",
+    "    parser.add_argument(\n",
+    "        \"--ratings\",\n",
+    "        default=\"./Movie_data.csv\",\n",
+    "        help=\"Path to Movie_data.csv\"\n",
+    "    )\n",
+    "    parser.add_argument(\n",
+    "        \"--titles\",\n",
+    "        default=\"./Movie_Id_Titles.csv\",\n",
+    "        help=\"Path to Movie_Id_Titles.csv\"\n",
+    "    )\n",
+    "    parser.add_argument(\n",
+    "        \"--k\",\n",
+    "        type=int,\n",
+    "        default=10,\n",
+    "        help=\"Number of similar users to use (k-neighbors)\"\n",
+    "    )\n",
+    "    parser.add_argument(\n",
+    "        \"--topn\",\n",
+    "        type=int,\n",
+    "        default=5,\n",
+    "        help=\"Top N recommended movies per user\"\n",
+    "    )\n",
+    "    parser.add_argument(\n",
+    "        \"--out\",\n",
+    "        default=\"user_top5_recs_sorted_by_username.json\",\n",
+    "        help=\"Output JSON file path\"\n",
+    "    )\n",
+    "\n",
+    "    # Parse the command-line arguments into `args`.\n",
+    "    args = parser.parse_args()\n",
+    "\n",
+    "    # --------------------------\n",
+    "    # Load the ratings dataset\n",
+    "    # --------------------------\n",
+    "    # NOTE: We pass `names=[...]`, which assumes the CSV has NO header row.\n",
+    "    # If the ratings CSV already contains a header row, we'd need to remove `names=...`\n",
+    "    # or specify header=0 to avoid treating the first data row incorrectly.\n",
+    "    df1 = pd.read_csv(\n",
+    "        args.ratings,\n",
+    "        names=[\"user_id\", \"username\", \"item_id\", \"rating\", \"timestamp\"]\n",
+    "    )\n",
+    "\n",
+    "    # Convert unix timestamps (seconds since epoch) to pandas datetime.\n",
+    "    # errors=\"coerce\" turns invalid timestamps into NaT instead of crashing.\n",
+    "    df1[\"timestamp\"] = pd.to_datetime(df1[\"timestamp\"], unit=\"s\", errors=\"coerce\")\n",
+    "\n",
+    "    # -------------------------------------------------\n",
+    "    # Create user_id -> username mapping\n",
+    "    # -------------------------------------------------\n",
+    "    # In a clean dataset, each user_id should map to exactly one username.\n",
+    "    # If there are multiple usernames for a given user_id (data quality issue),\n",
+    "    # this chooses the most frequently occurring username for that user_id.\n",
+    "    user_name_map = (\n",
+    "        df1.groupby(\"user_id\")[\"username\"]\n",
+    "        .agg(lambda s: s.value_counts().idxmax())\n",
+    "        .to_dict()\n",
+    "    )\n",
+    "\n",
+    "    # --------------------------\n",
+    "    # Load movie titles dataset\n",
+    "    # --------------------------\n",
+    "    # This CSV is expected to have at least:\n",
+    "    # - item_id (numeric movie identifier)\n",
+    "    # - title (movie title string)\n",
+    "    df2 = pd.read_csv(args.titles)\n",
+    "\n",
+    "    # ---------------------------------------------\n",
+    "    # Merge ratings with titles (left join)\n",
+    "    # ---------------------------------------------\n",
+    "    # Left join ensures we keep every rating row from df1.\n",
+    "    # If a movie ID doesn't exist in df2, title will become NaN.\n",
+    "    join_df = df1.merge(df2, on=\"item_id\", how=\"left\")\n",
+    "\n",
+    "    # ---------------------------------------------\n",
+    "    # Build interaction matrix (users x movies)\n",
+    "    # ---------------------------------------------\n",
+    "    # pivot_table creates a matrix where:\n",
+    "    # - index=\"user_id\" => each user_id becomes a row\n",
+    "    # - columns=\"title\" => each title becomes a column\n",
+    "    # - values=\"rating\" => cell contains rating\n",
+    "    # aggfunc=\"mean\" handles duplicate (user_id, title) pairs by averaging.\n",
+    "    # fill_value=0.0 makes missing ratings explicit as 0.0 (our \"unrated\" marker).\n",
+    "    interaction_df = join_df.pivot_table(\n",
+    "        index=\"user_id\",\n",
+    "        columns=\"title\",\n",
+    "        values=\"rating\",\n",
+    "        aggfunc=\"mean\",\n",
+    "        fill_value=0.0\n",
+    "    )\n",
+    "\n",
+    "    # Convert to NumPy array for efficient similarity computations.\n",
+    "    interaction = interaction_df.to_numpy()\n",
+    "\n",
+    "    # Keep the row/column labels so we can convert matrix indices back to real IDs/titles.\n",
+    "    users = interaction_df.index.to_numpy()\n",
+    "    movies = interaction_df.columns.to_numpy()\n",
+    "\n",
+    "    # ---------------------------------------------\n",
+    "    # Compute user-user cosine similarity\n",
+    "    # ---------------------------------------------\n",
+    "    # This produces a square matrix S where:\n",
+    "    # S[i, j] = cosine similarity between user i and user j\n",
+    "    user_similarity = cosine_similarity(interaction)\n",
+    "\n",
+    "    # ------------------------------------------------------------\n",
+    "    # Build output as a list of objects so we can sort by username\n",
+    "    # ------------------------------------------------------------\n",
+    "    user_objects: list[dict] = []\n",
+    "\n",
+    "    # For each user in our interaction matrix:\n",
+    "    for uid in users:\n",
+    "        uid_int = int(uid)\n",
+    "\n",
+    "        # Look up that user's username; default to \"Unknown\" if missing.\n",
+    "        username = str(user_name_map.get(uid_int, \"Unknown\"))\n",
+    "\n",
+    "        # Generate recommended movies + average neighbor rating score\n",
+    "        recs = _recommend_top_n_for_user_with_scores(\n",
+    "            user_id=uid_int,\n",
+    "            interaction=interaction,\n",
+    "            users=users,\n",
+    "            movies=movies,\n",
+    "            user_similarity=user_similarity,\n",
+    "            k=args.k,\n",
+    "            top_n=args.topn\n",
+    "        )\n",
+    "\n",
+    "        # Add this user record to our list\n",
+    "        user_objects.append(\n",
+    "            {\n",
+    "                \"user_id\": uid_int,\n",
+    "                \"username\": username,\n",
+    "                \"recommendations\": recs\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "    # Sort alphabetically by username (case-insensitive so \"alice\" and \"Alice\" behave consistently).\n",
+    "    user_objects.sort(key=lambda x: x[\"username\"].casefold())\n",
+    "\n",
+    "    # ---------------------------------------------\n",
+    "    # Write JSON output\n",
+    "    # ---------------------------------------------\n",
+    "    # We write a LIST (not a dict) so ordering is preserved in the output file\n",
+    "    # (JSON objects/dicts historically don't guarantee order everywhere).\n",
+    "    with open(args.out, \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(user_objects, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "    # Small confirmation message\n",
+    "    print(f\"Wrote {args.topn} scored recs (+ usernames) for {len(user_objects):,} users -> {args.out}\")\n",
+    "\n",
+    "\n",
+    "# Standard Python entrypoint guard:\n",
+    "# This ensures main() runs only when this file is executed directly:\n",
+    "#   python app.py\n",
+    "# and NOT when it is imported as a module from somewhere else.\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   }
  ],
  "metadata": {
